--- a/Self_Inspection_III/Self_Inspection.csproj
+++ b/Self_Inspection_III/Self_Inspection.csproj
@@ -174,6 +174,7 @@
     <Compile Include="TestCommands\01%29System, Flow Control\DelayExS.cs" />
     <Compile Include="TestCommands\01%29System, Flow Control\DelayS.cs" />
     <Compile Include="TestCommands\01%29System, Flow Control\GetPassFail.cs" />
+    <Compile Include="TestCommands\01%29System, Flow Control\GetUUT.cs" />
     <Compile Include="TestCommands\01%29System, Flow Control\Goto.cs" />
     <Compile Include="TestCommands\01%29System, Flow Control\If_Then.cs" />
     <Compile Include="TestCommands\01%29System, Flow Control\InputTextbox.cs" />
@@ -225,6 +226,9 @@
     <Compile Include="TestCommands\16%29Fluke\SetFluke_OutputState2.cs" />
     <Compile Include="TestCommands\16%29Fluke\SetFluke_OutputValue.cs" />
     <Compile Include="TestCommands\16%29Fluke\WriteFluke_Command.cs" />
+    <Compile Include="TestCommands\17%29Load\ReadLoadDev_Response.cs" />
+    <Compile Include="TestCommands\17%29Load\SetLoad_Mode.cs" />
+    <Compile Include="TestCommands\17%29Load\WriteLoadDev_Command.cs" />
     <Compile Include="TestCommands\18%29IO Card\SetIO_OutputState.cs" />
     <Compile Include="TestCommands\CmdsParameterEditor.cs" />
     <Compile Include="TestCommands\CmdsParameterEditor.Designer.cs">
@@ -354,7 +358,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="TestCommands\15%29DSO\" />
-    <Folder Include="TestCommands\17%29Load\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\LOADING.gif" />
